Clean for new generator